# fmm2d

./: .gitignore  CMakeLists.txt  README.md  make.inc.macos.gnu  make.inc.macos.gnu.x86-64  make.inc.manylinux  make.inc.windows.mingw  makefile  makehelm  meson.build  pyproject.toml
.github/workflows/: build-wheels-linux.sh  python.yml  python_build_posix.sh  python_build_win.ps1  python_cmake.yml  python_test_posix.sh  python_test_win.ps1  python_wheel.yml
c/include/: helmrouts2d.h  wideband2d.h
docs/: conf.py  fortran-c.rst  fortrandocs_helm.raw  fortrandocs_helm2.raw  fortrandocs_helm2_vec.raw  fortrandocs_helm_header.raw  fortrandocs_helm_header_vec.raw  genfortdocumentation_helm.py  index.rst  install.rst  math.rst  requirements.txt
examples/: hfmm2d_example.f  hfmm2d_example.make  hfmm2d_vec_example.f  hfmm2d_vec_example.make
include/fmm2d/: helmholtz.h
matlab/: c2ddir.m  cfmm2d.m  cfmm2dTest.m  fmm2d.c  fmm2d.mw  h2ddir.m  hfmm2d.m  hfmm2dTest.m  l2ddir.m  lfmm2d.m  lfmm2dTest.m  r2ddir.m  rfmm2d.m  rfmm2dTest.m  st2ddir.m  stfmm2d.m  stfmm2dTest.m  test_cfmm2d.m  test_fmm.m  test_hfmm2d.m  test_lfmm2d.m  test_rfmm2d.m
python/: CMakeLists.txt  bhfmmexample.py  cfmmexample.py  example1.py  lfmmexample.py  rfmmexample.py  setup.py  stfmm2d_example.py
python/fmm2dpy/: __init__.py  fmm2d.py
python/test/: test_bhfmm.py  test_cfmm.py  test_hfmm.py  test_lfmm.py  test_rfmm.py
src/: helmholtz_c.f03  makefile
src/biharmonic/: bh2dterms.f  bhfmm2d.f  bhfmm2dwrap.f  bhkernels2d.f  bhndiv2d.f  bhrouts2d.f
src/common/: cdjseval2d.f  dfft_threadsafe.f  fmmcommon2d.f  hank103.f  next235.f  pts_tree.f  pts_tree2d.f  tree_routs.f  tree_routs2d.f
src/helmholtz/: h2dcommon.f  h2dterms.f  helmkernels2d.f  helmrouts2d.f  hfmm2d.f  hfmm2d_mps.f  hfmm2d_mps_ndiv.f  hfmm2d_ndiv.f  hfmm2dnew.f  hfmm2dwrap.f  hfmm2dwrap_vec.f  hndiv2d.f  wideband2d.f  wideband2dnew.f
src/laplace/: cauchykernels2d.f  cfmm2d.f  cfmm2d_ndiv.f  cfmm2dwrap.f  cfmm2dwrap_vec.f  l2dterms.f  lapkernels2d.f  laprouts2d.f  lfmm2d.f  lfmm2d_ndiv.f  lfmm2dwrap.f  lfmm2dwrap_vec.f  lndiv2d.f  rfmm2d.f  rfmm2d_ndiv.f  rfmm2dwrap.f  rfmm2dwrap_vec.f  rlapkernels2d.f
src/modified-biharmonic/: jinjaroot.yaml  jinjaroot.yaml.py  mbhfmm2d.f  mbhgreen2d.f  mbhkernels2d.f  mbhkernels2d.f.j2  mbhrouts2d.f  mbhrouts2d.f.j2
src/stokes/: kernels.nb  stfmm2d.f  stokkernels2d.f
test/biharmonic/: run_bhtest.sh  test_bhfmm2d.f  test_bhfmm2d.make  test_bhrouts2d.f  test_bhrouts2d.make
test/helmholtz/: run_helmtest.sh  test_hfmm2d.f  test_hfmm2d.make  test_hfmm2d_hf.f  test_hfmm2d_hf.make  test_hfmm2d_mps.f90  test_hfmm2d_mps.make  test_hfmm2d_vec.f  test_hfmm2dnew.f  test_hfmm2dnew.make
test/laplace/: run_laptest.sh  test_cfmm2d.f  test_cfmm2d.make  test_cfmm2d_vec.f  test_cfmm2d_vec.make  test_lfmm2d.f  test_lfmm2d.make  test_lfmm2d_vec.f  test_lfmm2d_vec.make  test_rfmm2d.f  test_rfmm2d.make  test_rfmm2d_vec.f  test_rfmm2d_vec.make
test/modified-biharmonic/: jinjaroot.yaml  jinjaroot.yaml.py  run_mbhtest.sh  test_mbhfmm2d.f  test_mbhfmm2d.f.j2  test_mbhfmm2d.make  test_mbhrouts2d.f  test_mbhrouts2d.f.j2  test_mbhrouts2d.make
test/stokes/: test_stfmm2d.f  test_stfmm2d.make
