[build-system]
requires = [
    "scikit-build-core >= 0.4.3",
    "cmake >= 3.19",
    "numpy >= 1.12.0",
]

build-backend = "scikit_build_core.build"

[project]
name = "fmm2dpy"
description = "Python bindings for the FMM2D library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy >= 1.12.0"]
dynamic = ["version"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.targets = ["fmm2d", "hfmm2d_fortran", "lfmm2d_fortran", "bhfmm2d_fortran", "stfmm2d_fortran"]

wheel.packages = ["python/fmm2dpy"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/fmm2dpy/__init__.py"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
